--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -30,5 +30,8 @@ jobs:
       
     - name: Check EF Core Migrations
       run: |
-        dotnet tool install --global dotnet-ef
-        dotnet ef migrations list --project Infrastructure --startup-project AvansedFood || echo "No migrations or migrations check failed"
+        dotnet tool install --global dotnet-ef || true
+        echo "Checking AppDbContext migrations..."
+        dotnet ef migrations list --project Infrastructure --startup-project AvansedFood.Web --context AppDbContext || echo "AppDbContext migrations check complete"
+        echo "Checking IdentityDbContext migrations..."
+        dotnet ef migrations list --project AvansedFood.Web --startup-project AvansedFood.Web --context IdentityDbContext || echo "IdentityDbContext migrations check complete"
